WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144708
RenderLayer::currentTransform computes a pixel snapped rect it doesn't use
https://bugs.webkit.org/show_bug.cgi?id=144708
Summary
RenderLayer::currentTransform computes a pixel snapped rect it doesn't use
Dave Hyatt
Reported
2015-05-06 13:52:36 PDT
RenderLayer::currentTransform computes a pixel snapped rect it doesn't use. Make sure to only compute the pixel snapped rect for the rare cases where we actually need it.
Attachments
Patch
(2.61 KB, patch)
2015-05-06 13:55 PDT
,
Dave Hyatt
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2015-05-06 13:55:52 PDT
Created
attachment 252518
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-05-06 13:58:47 PDT
Comment on
attachment 252518
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=252518&action=review
> Source/WebCore/rendering/RenderLayer.cpp:977 > + // Note that pixelSnappedBorderRect is only computed inside the if statements, since > + // the common case is that neither of these if conditions is matched.
I don't think this comment is necessary.
Dave Hyatt
Comment 3
2015-05-06 14:01:40 PDT
Fixed in
r183887
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug