RenderLayer::currentTransform computes a pixel snapped rect it doesn't use. https://bugs.webkit.org/show_bug.cgi?id=144708

Reviewed by Simon Fraser.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::currentTransform):

Only compute a pixel snapped rect if we actually end up needing it. The common case
is that this rect is not needed, so pushing it inside the two if statements
speeds up the common case.



Canonical link: https://commits.webkit.org/162721@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183887 268f45cc-cd09-0410-ab3c-d52691b4dbfc